--- a/style.css
+++ b/style.css
@@ -9,21 +9,8 @@ body {
     align-items: center; /* Выравнивание по центру по вертикали */
 }
 
-#runButton {
-    background-color: rgb(255, 255, 255);
-    border: none;
-    width: 100vw;
-    height: 100vh;
-    transition: all 0.3s ease; /*добавление плавной анимации*/
-    font-size: 10vw;
-}
-
-#runButton:hover {
-    color: red;
-}
-
-/* Стиль для элемента загрузки (полноэкранного оверлея) */
-#loading {
+/* отображение загрузки wasm */
+.loading {
     position: fixed; /* Фиксированное позиционирование (не скроллится) */
     top: 0; /* Прижато к верху */
     left: 0; /* Прижато к левому краю */
@@ -37,7 +24,8 @@ body {
     z-index: 1000; /* Высокий z-index чтобы быть поверх других элементов */
 }
 
-#errorLoading {
+/* отображение ошибки загрузки */
+.errorLoading {
     color: red;
     position: fixed; /* Фиксированное позиционирование (не скроллится) */
     top: 0; /* Прижато к верху */
@@ -52,8 +40,8 @@ body {
     z-index: 1000; /* Высокий z-index чтобы быть поверх других элементов */
 }
 
-/* Стиль для анимированного спиннера (крутилки загрузки) */
-#spinner {
+/* крутилка загрузки */
+.spinner {
     border: 5px solid #f3f3f3; /* Серая граница */
     border-top: 5px solid #3498db; /* Синяя граница только сверху */
     border-radius: 50%; /* Скругление углов делает элемент круглым */
@@ -69,7 +57,7 @@ body {
 }
 
 /* Стиль для самого canvas элемента */
-#appCanvas {
+.appCanvas {
     display: block;
     margin: 0; /* внешние отступы */
     padding: 0; /* внутренние отступы */
