--- a/style.css
+++ b/style.css
@@ -10,6 +10,23 @@ body {
     align-items: center; /* Выравнивание по центру по вертикали */
 }
 
+.startButton {
+    border: none;
+    color: red;
+    font-size: 30;
+    position: fixed; /* Фиксированное позиционирование (не скроллится) */
+    top: 0; /* Прижато к верху */
+    left: 0; /* Прижато к левому краю */
+    width: 100vw; /* На всю ширину экрана */
+    height: 100vh; /* На всю высоту экрана */
+    background: rgba(255, 255, 255, 1); /* Белый полупрозрачный фон */
+    display: flex; /* Используем flex-раскладку */
+    justify-content: center; /* Выравнивание по центру по горизонтали */
+    align-items: center; /* Выравнивание по центру по вертикали */
+    flex-direction: column; /* Элементы внутри располагаются в колонку */
+    z-index: 2000; /* Высокий z-index чтобы быть поверх других элементов */
+}
+
 /* отображение загрузки wasm */
 .loadingScreen {
     position: fixed; /* Фиксированное позиционирование (не скроллится) */
@@ -18,7 +35,7 @@ body {
     width: 100vw; /* На всю ширину экрана */
     height: 100vh; /* На всю высоту экрана */
     background: rgba(255, 255, 255, 1); /* Белый полупрозрачный фон */
-    display: flex; /* Используем flex-раскладку */
+    display: none; /* Используем flex-раскладку */
     justify-content: center; /* Выравнивание по центру по горизонтали */
     align-items: center; /* Выравнивание по центру по вертикали */
     flex-direction: column; /* Элементы внутри располагаются в колонку */
