--- a/style.css
+++ b/style.css
@@ -81,6 +81,6 @@ body {
     margin: 0; /* внешние отступы */
     padding: 0; /* внутренние отступы */
     border: none; /* убрать границу (рамку) */
-    width: 100vw; /* На всю ширину */
-    height: 100vh; /* На всю высоту видимой области (viewport height) */
+    /* width: 100vw; /* На всю ширину */
+    /*height: 100vh; На всю высоту видимой области (viewport height) */
 }
